Clock Unit Testing Ok

--- a/Assets/Tests/Editor/ClockTest/ClockTest.asmdef
+++ b/Assets/Tests/Editor/ClockTest/ClockTest.asmdef
@@ -5,7 +5,10 @@
         "UnityEngine.TestRunner",
         "UnityEditor.TestRunner",
         "Core",
-        "Clock"
+        "Clock",
+        "UniRx",
+        "Zenject",
+        ""
     ],
     "includePlatforms": [
         "Editor"
