Stopwatch Testing done

--- a/Assets/Tests/Editor/ClockTest/ClockTest.asmdef
+++ b/Assets/Tests/Editor/ClockTest/ClockTest.asmdef
@@ -7,8 +7,7 @@
         "Core",
         "Clock",
         "UniRx",
-        "Zenject",
-        ""
+        "Zenject"
     ],
     "includePlatforms": [
         "Editor"
