refactor and testing donde

--- a/Assets/Tests/Editor/TimerTest/TimerTest.asmdef
+++ b/Assets/Tests/Editor/TimerTest/TimerTest.asmdef
@@ -6,7 +6,8 @@
         "UnityEditor.TestRunner",
         "Core",
         "Timer",
-        "UniRx"
+        "UniRx",
+        "Zenject"
     ],
     "includePlatforms": [
         "Editor"
